--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,3 +3,7 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+set -g base-index 1
+setw -g pane-base-index 1
+set -g renumber-windows on
+
