--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -14,21 +14,21 @@
     "wm",
     "wmtheme",
     "theme",
-    #"icons",
-    #"font",
-    #"cursor",
+    //"icons",
+    //"font",
+    //"cursor",
     "terminal",
     "terminalfont",
     "cpu",
     "gpu",
     "memory",
-    #"swap",
+    //"swap",
     "disk",
     "localip",
     "battery",
     "poweradapter",
     "locale",
     "break",
-    #"colors"
+    //"colors"
   ]
 }
