--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,9 +1,13 @@
+source-file "~/.bash_profile"
 set -g mouse on
 bind h select-pane -L
 bind l select-pane -R
 bind k select-pane -U
 bind j select-pane -D
 set -g base-index 1
-setw -g pane-base-index 1
+set -g pane-base-index 1
 set -g renumber-windows on
+set -g mode-keys vi
+set -g prefix C-SPACE
+bind 'v' copy-mode
 
