stowabled waybar config from cachy, TODO styling and connection info

--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-$waybar = waybar -c ~/.config/waybar/confighypr.jsonc 
+$waybar = waybar -c ~/.config/waybar/config
 exec-once = $waybar
 exec-once = hypridle & gammastep -O 2700 & ptyxis & hyprpaper & xhost +SI:localuser:root
 
