cleane, added fulscreen, changed suspension time (stayed the same as lock, smth not worked earlier)

--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -69,7 +69,7 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    
+
     blur {
         enabled = true
         size = 3
@@ -136,30 +136,6 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, $terminal
-bind = $mainMod, Q, killactive, 
-bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating, 
-bind = $mainMod, D, exec, $menu
-bind = $mainMod SHIFT, M, exec, systemctl suspend
-# bind = $mainMod, P, exec, flatpak run app.zen_browser.zen
-# bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, O, togglesplit, # dwindle
-bind = $mainMod, P, exec, firefox
-bind = , PRINT, exec, hyprshot -m window -o ~/Pictures/Screenshots/
-bind = shift, PRINT, exec, hyprshot -m region -o ~/Pictures/Screenshots/
-
-bind = $mainMod SHIFT, L, exec, $lock
- 
-# Special Keys
-bind = , xf86monbrightnessup, exec, brightnessctl set 10%+
-bind = , xf86monbrightnessdown, exec, brightnessctl set 10%-
-bind = , xf86audioraisevolume, exec, wpctl set-volume @DEFAULT_SINK@ 5%+
-bind = , xf86audiolowervolume, exec, wpctl set-volume @DEFAULT_SINK@ 5%-
-bind = , xf86audiomute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
-
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
@@ -201,3 +177,27 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:273, movewindow
 bindm = $mainMod, mouse:272, resizewindow
+
+# Binds
+bind = $mainMod, Return, exec, $terminal
+bind = $mainMod, Q, killactive,
+bind = $mainMod, F, fullscreen,
+bind = $mainMod, M, exit,
+bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, D, exec, $menu
+bind = $mainMod SHIFT, M, exec, systemctl suspend
+# bind = $mainMod, P, exec, flatpak run app.zen_browser.zen
+# bind = $mainMod, P, pseudo, # dwindle
+# bind = $mainMod, O, togglesplit, # dwindle
+bind = $mainMod, P, exec, firefox
+bind = , PRINT, exec, hyprshot -m window -o ~/Pictures/Screenshots/
+bind = shift, PRINT, exec, hyprshot -m region -o ~/Pictures/Screenshots/
+bind = $mainMod SHIFT, L, exec, $lock
+# Special Keys
+bind = , xf86monbrightnessup, exec, brightnessctl set 10%+
+bind = , xf86monbrightnessdown, exec, brightnessctl set 10%-
+bind = , xf86audioraisevolume, exec, wpctl set-volume @DEFAULT_SINK@ 5%+
+bind = , xf86audiolowervolume, exec, wpctl set-volume @DEFAULT_SINK@ 5%-
+bind = , xf86audiomute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
+
