--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -108,10 +108,10 @@ master {
     new_status = false
 }
 
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = on
-}
+#gestures {
+#    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+#    workspace_swipe = on
+#}
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -122,7 +122,7 @@ misc {
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
     name = epic-mouse-v1
-    sensitivity = -0.5
+    sensitivity = -0.3
 }
 
 # Example windowrule v1
