Browser keybind changed to one hand friendly

--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -190,7 +190,7 @@ bind = $mainMod SHIFT, M, exec, systemctl suspend
 # bind = $mainMod, P, exec, flatpak run app.zen_browser.zen
 # bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, O, togglesplit, # dwindle
-bind = $mainMod, P, exec, firefox
+bind = $mainMod, W, exec, firefox
 bind = , PRINT, exec, hyprshot -m window -o ~/Pictures/Screenshots/
 bind = shift, PRINT, exec, hyprshot -m region -o ~/Pictures/Screenshots/
 bind = $mainMod SHIFT, L, exec, $lock
