--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -7,6 +7,6 @@ set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
 set -g mode-keys vi
-set -g prefix C-SPACE
+# set -g prefix C-SPACE
 bind 'v' copy-mode
 
