--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 $waybar = waybar -c ~/.config/waybar/config
 exec-once = $waybar
-exec-once = hypridle & gammastep -O 2700 & ptyxis & hyprpaper & xhost +SI:localuser:root
+exec-once = hypridle & gammastep -O 3200 & ptyxis & hyprpaper & xhost +SI:localuser:root
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -45,6 +45,7 @@ input {
 
     touchpad {
         natural_scroll = yes
+        gesture = 3, horizontal, workspace
     }
 
     sensitivity = 0.3 # -1.0 to 1.0, 0 means no modification.
